# notebooklm-sources

./: .gitignore  courses.toml  courses.yaml  main.py  pyproject.toml
notebooklm_sources/: mapping.py  pdf.py  pdf_page.py  upload_sources.py
