[project]
name = "download-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "notebooklm-mcp-cli>=0.5.31",
    "pdf2image>=1.17.0",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]
